--- a/src/global.css
+++ b/src/global.css
@@ -468,7 +468,6 @@ body,
     height: 100%;
 
     margin: 0;
-    padding: 0.4rem;
 
     font-size: var(--text-font-size);
     font-weight: var(--text-font-weight);
@@ -483,8 +482,6 @@ body,
     white-space: normal;
     word-break: break-word;
     overflow-wrap: break-word;
-
-    overflow: hidden !important;
   }
 
   order: 1;
@@ -518,6 +515,7 @@ body,
   p {
     margin: 0;
     height: auto;
+    background: transparent;
   }
 
   text-wrap: wrap;
@@ -531,6 +529,29 @@ pre {
   white-space: pre-wrap;
   word-break: break-word;
   overflow: hidden;
+}
+
+.clipboard-item-color {
+  width: 100%;
+  height: 100%;
+
+  border-radius: var(--clipboard-item-border-radius);
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.clipboard-item-color-text {
+  padding: 10px;
+
+  border-radius: var(--clipboard-item-border-radius);
+  box-sizing: border-box;
+  background-color: rgba(5, 5, 5, 0.6);
+
+  font-size: calc(var(--text-font-size) * 1.5);
 }
 
 .clipboard-history-item-pinned {
@@ -564,9 +585,6 @@ pre {
 
   transform: scale(var(--clipboard-item-hover-scale));
 
-  p {
-    padding: 0.35rem;
-  }
 
   img {
     border-radius: 10px;
